# igdb-mcp-server

./: .gitignore  README.md  pyproject.toml
src/igdb_mcp_server/: server.py
